--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,5 +27,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets._TOKEN }}
           publish_dir: ./build
+          # Ensure force_orphan is set to true to avoid issues with the gh-pages branch
+          force_orphan: true
