--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "afc",
   "private": true,
+  "homepage": "https://mct33611.github.io/AFC/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
