--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets._TOKEN }}
-          publish_dir: ./build
+          publish_dir: ./dist
           # Ensure force_orphan is set to true to avoid issues with the gh-pages branch
           force_orphan: true
